Add Signin method and goa gen
